css/test-css.css
html, body {
  margin: 0;
  padding: 0;
  position: absolute;
  background-color: white;
  font-size: 16pt;
  width: 100% !important;
}

hr {
  width: 100%;
  margin-left: -70px !important;
  border: none;
  height: 1px;
  color: #BEBEBE;
  background-color: #BEBEBE;
}

/****************
*    Header     *
****************/

/* CSS for RRAIN logo on header */
#index-header-logo {
  float: right;
  width: 45px;
  height: auto !important;
  margin-right: 15px !important;
  margin-top: -40px;
}

/* CSS for green bar on header */
.blog-title {
  background-color: #00823e;
	color: white !important;
  font-size: 16pt !important;
  font-weight: bold !important;
	font-family:  'Helvetica' !important;
	border: none !important;
  width: 100%;
	padding: 13px 50px 13px 13px !important;
}

/* CSS for main title on header */
.blog-title a {
  color: white;
  text-decoration: none;
}

/****************
*    Footer     *
****************/

.blog-footer {
  padding-left: 20px !important;
  padding-right: 15px !important;
  font-family: sans-serif;
  font-size: 8pt;
  text-align: center;
}

.blog-footer a {
  text-decoration: none;
}

.blog-footer p:last-child {
  margin-bottom: 0px;
}

.footer-text {
  max-width: 500px !important;
  text-align: center !important;
  padding-left: 35px;
  padding-right: 35px;
  display: inline-block;
  /*position: relative;*/
}

#foot-img {
  width: auto;
  height: auto;
  max-height: 50px;
  margin-right: 15pt;
}

/****************
*    Content    *
****************/

/* CSS for menu titles */
.blog-post-title {
  margin-left: 110px;
  margin-right: -130px;
  margin-top: -6px;

}

.blog-post-title a {
  font-size: 13pt;
  font-weight: bold;
  font-family: 'Helvetica' !important;
  color: #1E2D5F;
  text-decoration: none;
  position: relative;
  display: inline-block;
}

/* CSS for grey line between menu titles */
.divider {
  position: absolute;
  width: 100%;
  margin-left: 40px;
  margin-right: 40px;
  margin-top: 89px;
  border-bottom: 1px solid #BEBEBE;
}

/* CSS for grey arrows */
.material-icons {
  position: absolute;
  right: 0;
  margin-right: 46px;
  margin-top: 1080px;
  display: inline-block;
  padding-left: 15px !important;
	/*color: #BEBEBE;*/
  color: red;
}

/****************
*     Icons     *
****************/

.container {
  position: relative;
}

.st1 {
  position: absolute;
  margin-left: 42px;
  margin-top: 23px;
}

.st2 {
  position: absolute;
  margin-left: 43px;
  margin-top: 122px;
}

.st3 {
  position: absolute;
  margin-left: 43px;
  margin-top: 205px;
}

.st4 {
  position: absolute;
  margin-left: 43px;
  margin-top: 303px;
}

.st5 {
  position: absolute;
  margin-left: 45px;
  margin-top: 404px;
}
.st6 {
  position: absolute;
  margin-left: 47px;
  margin-top: 492px;
}

.st7 {
  position: absolute;
  margin-left: 47px;
  margin-top: 584px;
}

.st8 {
  position: absolute;
  margin-left: 45px;
  margin-top: 689px;
}

.st9 {
  position: absolute;
  margin-left: 47px;
  margin-top: 769px;
}

.st10 {
  position: absolute;
  margin-left: 45px;
  margin-top: 867px;
}

.st11 {
  position: absolute;
  margin-left: 46px;
  margin-top: 957px;
}

.st12 {
  position: absolute;
  margin-left: 45px;
  margin-top: 1049px;
}

@media screen and (max-width: 571px) {
    .st12 {
      margin-top: 1060px;
    }
}

@media screen and (max-width: 486px) {


  .st12 {
    margin-top: 1060px;
  }
}

@media screen and (max-width: 400px) {
  .st12 {
    margin-top: 1054px;
  }
}

